--- a/index.html
+++ b/index.html
@@ -1,120 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Tarefas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        .finished {
-            color: #6c757d; /* Cor um pouco mais suave para o texto finalizado */
-            text-decoration: none; /* Remove o risco padrão */
-        }
-        .finished::before {
-            content: "✅ OK ";
-        }
-        .list-group-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .task-actions button {
-            margin-left: 5px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login + Lista de Tarefas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-4">
-        <h1>Minha Lista de Tarefas</h1>
-        <div class="input-group mb-3">
-            <input type="text" id="new-task" class="form-control" placeholder="Adicionar nova tarefa..." aria-label="Adicionar nova tarefa">
-            <button class="btn btn-outline-success" type="button" onclick="addTask()">Adicionar</button>
-        </div>
-        <ul id="task-list" class="list-group">
-            </ul>
+  <div class="container mt-5" id="login-screen">
+    <h2>Login</h2>
+    <div class="mb-3">
+      <label for="username" class="form-label">Usuário</label>
+      <input type="text" class="form-control" id="username">
     </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Senha</label>
+      <input type="password" class="form-control" id="password">
+    </div>
+    <button class="btn btn-primary" onclick="login()">Entrar</button>
+    <div id="login-error" class="text-danger mt-2" style="display:none;">Usuário ou senha inválido!</div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script>
-        const taskInput = document.getElementById('new-task');
-        const taskList = document.getElementById('task-list');
-        const localStorageKey = 'taskList';
+  <div class="container mt-4" id="todo-app" style="display:none;">
+    <h1>Minha Lista de Tarefas</h1>
+    <div class="input-group mb-3">
+      <input type="text" id="new-task" class="form-control" placeholder="Adicionar nova tarefa...">
+      <button class="btn btn-outline-success" type="button" onclick="addTask()">Adicionar</button>
+    </div>
+    <ul id="task-list" class="list-group"></ul>
+    <button class="btn btn-secondary mt-3" onclick="logout()">Sair</button>
+  </div>
 
-        document.addEventListener('DOMContentLoaded', loadTasks);
+  <script>
+    const USER = 'admin';
+    const PASSWORD = 'admin';
 
-        function loadTasks() {
-            const storedTasks = localStorage.getItem(localStorageKey);
-            if (storedTasks) {
-                const tasks = JSON.parse(storedTasks);
-                tasks.forEach(task => {
-                    addTaskToDOM(task.text, task.finished);
-                });
-            }
-        }
+    const taskInput = document.getElementById('new-task');
+    const taskList = document.getElementById('task-list');
+    const localStorageKey = 'taskList';
 
-        function saveTasks() {
-            const tasks = [];
-            taskList.querySelectorAll('.list-group-item').forEach(item => {
-                const span = item.querySelector('span');
-                tasks.push({
-                    text: span.dataset.originalText || span.textContent.replace("✅ OK ", ""),
-                    finished: span.classList.contains('finished')
-                });
-            });
-            localStorage.setItem(localStorageKey, JSON.stringify(tasks));
-        }
+    document.addEventListener('DOMContentLoaded', () => {
+      if (localStorage.getItem('loggedIn') === 'true') {
+        showTodoApp();
+        loadTasks();
+      }
+    });
 
-        function addTask() {
-            const taskText = taskInput.value.trim();
+    function login() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const errorBox = document.getElementById('login-error');
 
-            if (taskText !== "") {
-                addTaskToDOM(taskText, false);
-                taskInput.value = "";
-                saveTasks();
-            }
-        }
+      if (username === USER && password === PASSWORD) {
+        localStorage.setItem('loggedIn', 'true');
+        errorBox.style.display = 'none';
+        showTodoApp();
+        loadTasks();
+      } else {
+        errorBox.style.display = 'block';
+      }
+    }
 
-        function addTaskToDOM(text, finished) {
-            const listItem = document.createElement('li');
-            listItem.classList.add('list-group-item');
-            listItem.innerHTML = `
-                <span>${text}</span>
-                <div class="task-actions">
-                    <button class="btn btn-sm btn-warning finish-button" onclick="finishTask(this)">Finalizar</button>
-                    <button class="btn btn-sm btn-danger delete-button" onclick="removeTask(this)">Excluir</button>
-                </div>
-            `;
-            taskList.appendChild(listItem);
+    function logout() {
+      localStorage.removeItem('loggedIn');
+      document.getElementById('todo-app').style.display = 'none';
+      document.getElementById('login-screen').style.display = 'block';
+    }
 
-            const span = listItem.querySelector('span');
-            if (finished) {
-                span.classList.add('finished');
-                span.dataset.originalText = text;
-                span.textContent = "";
-            }
-        }
+    function showTodoApp() {
+      document.getElementById('login-screen').style.display = 'none';
+      document.getElementById('todo-app').style.display = 'block';
+    }
 
-        function removeTask(button) {
-            const listItem = button.closest('.list-group-item');
-            listItem.remove();
-            saveTasks();
-        }
+    function loadTasks() {
+      const storedTasks = localStorage.getItem(localStorageKey);
+      if (storedTasks) {
+        const tasks = JSON.parse(storedTasks);
+        tasks.forEach(task => {
+          addTaskToDOM(task.text, task.finished);
+        });
+      }
+    }
 
-        function finishTask(button) {
-            const listItem = button.closest('.list-group-item');
-            const taskTextSpan = listItem.querySelector('span');
-            const originalText = taskTextSpan.dataset.originalText || taskTextSpan.textContent.replace("✅ OK ", "");
-            taskTextSpan.classList.toggle('finished');
+    function saveTasks() {
+      const tasks = [];
+      taskList.querySelectorAll('.list-group-item').forEach(item => {
+        const span = item.querySelector('.task-text');
+        tasks.push({
+          text: span.textContent,
+          finished: span.classList.contains('finished')
+        });
+      });
+      localStorage.setItem(localStorageKey, JSON.stringify(tasks));
+    }
 
-            if (taskTextSpan.classList.contains('finished')) {
-                taskTextSpan.dataset.originalText = originalText;
-                taskTextSpan.textContent = "";
-            } else {
-                taskTextSpan.textContent = originalText;
-                delete taskTextSpan.dataset.originalText;
-            }
-            saveTasks();
-        }
-    </script>
+    function addTask() {
+      const taskText = taskInput.value.trim();
+      if (taskText !== "") {
+        addTaskToDOM(taskText, false);
+        taskInput.value = "";
+        saveTasks();
+      }
+    }
+
+    function addTaskToDOM(text, finished) {
+      const listItem = document.createElement('li');
+      listItem.classList.add('list-group-item');
+
+      const statusHTML = finished
+        ? '<span class="status-ok">✅ OK</span>'
+        : '<span class="status-ok" style="visibility: hidden;">✅ OK</span>';
+
+      listItem.innerHTML = `
+        ${statusHTML}
+        <span class="task-text ${finished ? 'finished' : ''}">${text}</span>
+        <div class="task-actions">
+          <button class="btn btn-sm btn-warning" onclick="finishTask(this)">Finalizar</button>
+          <button class="btn btn-sm btn-danger" onclick="removeTask(this)">Excluir</button>
+        </div>
+      `;
+
+      taskList.appendChild(listItem);
+    }
+
+    function removeTask(button) {
+      const listItem = button.closest('.list-group-item');
+      listItem.remove();
+      saveTasks();
+    }
+
+    function finishTask(button) {
+      const listItem = button.closest('.list-group-item');
+      const textSpan = listItem.querySelector('.task-text');
+      const statusSpan = listItem.querySelector('.status-ok');
+
+      textSpan.classList.toggle('finished');
+
+      statusSpan.style.visibility = textSpan.classList.contains('finished') ? 'visible' : 'hidden';
+
+      saveTasks();
+    }
+  </script>
 </body>
 </html>
