--- a/index.html
+++ b/index.html
@@ -33,25 +33,6 @@
     <button class="btn btn-secondary mt-3" onclick="logout()">Sair</button>
   </div>
 
-  <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Exclusão</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-        </div>
-        <div class="modal-body">
-          Tem certeza que deseja excluir esta tarefa?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Excluir</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const USER = 'admin';
     const PASSWORD = 'admin';
@@ -60,8 +41,6 @@
     const dueDateInput = document.getElementById('due-date');
     const taskList = document.getElementById('task-list');
     const localStorageKey = 'taskList';
-
-    let taskToDelete = null;
 
     document.addEventListener('DOMContentLoaded', () => {
       if (localStorage.getItem('loggedIn') === 'true') {
@@ -113,7 +92,7 @@
         const span = item.querySelector('.task-text');
         const dueDate = item.getAttribute('data-due-date');
         tasks.push({
-          text: span.textContent.split(' (Entrega:')[0],
+          text: span.textContent.split(' (Entrega:')[0],  // Salva só o texto puro
           finished: span.classList.contains('finished'),
           dueDate: dueDate
         });
@@ -159,20 +138,12 @@
     }
 
     function removeTask(button) {
-      taskToDelete = button.closest('.list-group-item');
-      const confirmModal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'));
-      confirmModal.show();
-    }
-
-    document.getElementById('confirmDeleteBtn').addEventListener('click', () => {
-      if (taskToDelete) {
-        taskToDelete.remove();
+      if (confirm('Tem certeza que deseja excluir esta tarefa?')) {
+        const listItem = button.closest('.list-group-item');
+        listItem.remove();
         saveTasks();
-        taskToDelete = null;
       }
-      const confirmModal = bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal'));
-      confirmModal.hide();
-    });
+    }
 
     function finishTask(button) {
       const listItem = button.closest('.list-group-item');
@@ -180,6 +151,7 @@
       const statusSpan = listItem.querySelector('.status-ok');
 
       textSpan.classList.toggle('finished');
+
       statusSpan.style.visibility = textSpan.classList.contains('finished') ? 'visible' : 'hidden';
 
       saveTasks();
@@ -187,7 +159,7 @@
 
     function formatDate(dateStr) {
       const parts = dateStr.split('-');
-      return `${parts[2]}/${parts[1]}/${parts[0]}
+      return `${parts[2]}/${parts[1]}/${parts[0]}`; // dd/mm/yyyy
     }
   </script>
 </body>
